# btg_fastapi_library_tech_case

./: .env.template  .gitignore  README.md  library.db  pyproject.toml
app/: main.py
app/api/v1/routers/: auth.py  books.py  lendings.py  users.py
app/api/v1/schemas/: book.py  lending.py  paginated_response.py  token.py  user.py
app/core/: __init__.py  config.py  exceptions.py  logging_config.py  rate_limiter.py  security.py
app/db/: database.py  fixtures.py
app/models/: __init__.py  base.py  book.py  lending.py  user.py
app/repositories/: book.py  book_repository.py  lending.py  lending_repository.py  user.py  user_repository.py
app/services/: book.py  book_service.py  exceptions.py  lending.py  lending_service.py  user.py  user_service.py
tests/: conftest.py  factories.py  test_book_model.py  test_book_service.py  test_database.py  test_dev_admin.py  test_lending_model.py  test_lending_repository.py  test_lending_router.py  test_lending_service.py  test_repositories.py  test_routers.py  test_security.py  test_security_jwt.py  test_services.py  test_user_password.py  test_user_role.py
